argocd/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - pipr-uat-argo.dol.go.th
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: custom-ca
    - hosts:
        - pipr-uat-argo.dol.go.th
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
